compiler/driver/tests/snapshots/diagnostics_snapshots__diag_generic_arity_mismatch.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[P006]: Invalid expression
  --> test.ny:2:22
   |
  2 |     let x = if true { 1 } else { "no" }
   |                      ^^^
error[P006]: Invalid expression
  --> test.ny:2:27
   |
  2 |     let x = if true { 1 } else { "no" }
   |                           ^^^
